[package]
name = "simple-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# beta.2だと動作しないので､rc.9に変更
# https://zenn.dev/esaka/scraps/2ced052b6d5903
#clap = "=3.0.0-beta.2"
clap = { version = "=3.0.0-rc.9", features = ["derive"] }
anyhow = "1.0"
